--- a/a.html
+++ b/a.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>简单网页</title>
+  <title>我的网页</title>
 </head>
 <body>
-    <h1>我的第一个网页45646</h1>
-    <p>这是一个段落。</p>
-    <a href="https://www.example.com">这是一个链接</a>
+  <h1>欢迎来到我的网页！</h1>
+  <p>这是一个简单的HTML页面。</p>
 </body>
 </html>
